crates/ars-components/src/input/range_slider/snapshots/ars_components__input__range_slider__tests__range_slider_thumb_start.snap
---
source: crates/ars-components/src/input/range_slider/mod.rs
expression: "snapshot_attrs(&svc.connect(&|_| {}).thumb_attrs(ThumbIndex::Start))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-index",
            ),
            String(
                "0",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "thumb",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "range-slider",
            ),
        ),
        (
            Data(
                "ars-thumb-alignment",
            ),
            String(
                "contain",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Range start",
            ),
        ),
        (
            Aria(
                Orientation,
            ),
            String(
                "horizontal",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "75",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "25",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "25",
            ),
        ),
        (
            Class,
            String(
                "ars-touch-none",
            ),
        ),
        (
            Id,
            String(
                "price-thumb-start",
            ),
        ),
        (
            Role,
            String(
                "slider",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [
        (
            Left,
            "25%",
        ),
    ],
}
