crates/ars-components/src/input/range_slider/snapshots/ars_components__input__range_slider__tests__range_slider_thumb_start_disabled_described.snap
---
source: crates/ars-components/src/input/range_slider/mod.rs
expression: "snapshot_attrs(&disabled.connect(&|_| {}).thumb_attrs(ThumbIndex::Start))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-focus-visible",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-index",
            ),
            String(
                "0",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "thumb",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "range-slider",
            ),
        ),
        (
            Data(
                "ars-thumb-alignment",
            ),
            String(
                "contain",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                ErrorMessage,
            ),
            String(
                "price-error-message",
            ),
        ),
        (
            Aria(
                Invalid,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Range start",
            ),
        ),
        (
            Aria(
                Orientation,
            ),
            String(
                "horizontal",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "75",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "25",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "25",
            ),
        ),
        (
            Aria(
                DescribedBy,
            ),
            String(
                "price-description",
            ),
        ),
        (
            Class,
            String(
                "ars-touch-none",
            ),
        ),
        (
            Id,
            String(
                "price-thumb-start",
            ),
        ),
        (
            Role,
            String(
                "slider",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [
        (
            Left,
            "25%",
        ),
    ],
}
