crates/ars-components/src/input/range_slider/snapshots/ars_components__input__range_slider__tests__range_slider_track.snap
---
source: crates/ars-components/src/input/range_slider/mod.rs
expression: snapshot_attrs(&api.track_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "track",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "range-slider",
            ),
        ),
        (
            Id,
            String(
                "price-track",
            ),
        ),
    ],
    styles: [],
}
